# zurutech-challenge

./: README.md  pyproject.toml  structure.json
pyls/: __init__.py  __main__.py  exceptions.py  filter_strategy.py  output_format.py  pyls.py  sort_strategy.py
tests/: test_pyls.py  test_pyts.py
