[tool.poetry]
name = "pyls"
version = "0.1.0"
description = "Python Utility Library"
authors = ["Sourabh Adap <adapsourbh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
